--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -1,10 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CarroActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:text="Mantenimiento de Carros"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"/>
+
+    <EditText
+        android:id="@+id/txtPlaca"
+        android:hint="Placa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/txtModelo"
+        android:hint="Modelo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/txtAno"
+        android:hint="Año"
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ListView
+        android:id="@+id/listCarros"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingTop="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
+
+        <ImageButton
+            android:id="@+id/btnAgregar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Agregar"
+            android:padding="8dp"
+            android:src="@drawable/ic_agregar" />
+
+        <ImageButton
+            android:id="@+id/btnEditar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="14dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Editar"
+            android:padding="8dp"
+            android:src="@drawable/ic_editar" />
+
+        <ImageButton
+            android:id="@+id/btnEliminar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="14dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Eliminar"
+            android:padding="8dp"
+            android:src="@drawable/ic_eliminar" />
+
+        <ImageButton
+            android:id="@+id/btnBuscar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="14dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="Buscar"
+            android:padding="8dp"
+            android:src="@drawable/ic_buscar" />
+    </LinearLayout>
+
+</LinearLayout>
