--- a/app/src/main/res/layout/activity_servicio.xml
+++ b/app/src/main/res/layout/activity_servicio.xml
@@ -1,10 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ServicioActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abril_fatface"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Servicios"
+        android:textSize="22sp"
+        android:textStyle="bold">
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtIdServicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ID Servicio"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/txtNombreServicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nombre del Servicio"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/txtPrecioServicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Precio"
+        android:inputType="numberDecimal" />
+
+    <ListView
+        android:id="@+id/listServicios"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="10dp">
+
+        <ImageButton
+            android:id="@+id/btnAgregarServicio"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_agregar"/>
+
+        <ImageButton
+            android:id="@+id/btnEditarServicio"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_editar"
+            android:layout_marginLeft="20dp"/>
+
+        <ImageButton
+            android:id="@+id/btnEliminarServicio"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_eliminar"
+            android:layout_marginLeft="20dp"/>
+
+        <ImageButton
+            android:id="@+id/btnRegresarServicio"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_regresar"
+            android:padding="20dp"/>
+    </LinearLayout>
+
+</LinearLayout>
