--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -5,13 +5,15 @@
     android:orientation="horizontal"
     android:padding="10dp">
 
+    <!-- Ícono del cliente -->
     <ImageView
-        android:id="@+id/imgCarro"
+        android:id="@+id/imgCliente"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_carro"
+        android:src="@drawable/ic_cliente"
         android:padding="5dp" />
 
+    <!-- Datos del cliente -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,26 +21,41 @@
         android:layout_marginStart="15dp">
 
         <TextView
-            android:id="@+id/txtPlaca"
+            android:id="@+id/txtCedula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Placa: "
+            android:text="Cédula: "
             android:textStyle="bold"
             android:textSize="16sp"/>
 
         <TextView
-            android:id="@+id/txtModelo"
+            android:id="@+id/txtNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Modelo: "
+            android:text="Nombre: "
             android:textSize="14sp"/>
 
         <TextView
-            android:id="@+id/txtAnno"
+            android:id="@+id/txtApellidos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Año: "
+            android:text="Apellidos: "
             android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/txtTelefono"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Teléfono: "
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/txtCorreo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Correo: "
+            android:textSize="14sp"/>
+
     </LinearLayout>
 
 </LinearLayout>
