Add string resources and enable localization for UI titles
Replaced hardcoded UI titles in layout files with string resources to support localization. Added English translations in a new values-en/strings.xml file and updated the default strings.xml with corresponding keys and Spanish values.

--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/abril_fatface"
         android:padding="10dp"
-        android:text="Carros"
+        android:text="@string/menu_cars"
         android:textSize="24sp"
         android:textStyle="bold" />
     <!--Busqueda-->
