--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/abril_fatface"
-        android:text="Sistema de Lavacar"
+        android:text="@string/menu_title"
         android:textSize="20sp"
         android:textStyle="bold" />
 
