--- a/app/src/main/res/layout/activity_servicio.xml
+++ b/app/src/main/res/layout/activity_servicio.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="Servicios"
+        android:text="@string/menu_services"
         android:textSize="24sp"
         android:textStyle="bold" />
 
