--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -39,6 +39,7 @@
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
             android:contentDescription="Buscar"
+            android:onClick="Buscar"
             android:src="@drawable/ic_buscar" />
     </LinearLayout>
 
@@ -64,6 +65,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:contentDescription="Agregar"
+            android:onClick="Insertar"
             android:src="@drawable/ic_agregar" />
 
         <ImageButton
@@ -73,6 +75,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:contentDescription="Editar"
+            android:onClick="Update"
             android:src="@drawable/ic_editar" />
 
         <ImageButton
@@ -82,6 +85,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:contentDescription="Eliminar"
+            android:onClick="Eliminar"
             android:src="@drawable/ic_eliminar" />
 
         <ImageButton
@@ -91,6 +95,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:contentDescription="Salir"
+            android:onClick="regresar"
             android:src="@drawable/ic_regresar" />
     </LinearLayout>
 
