--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -12,35 +12,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:fontFamily="@font/abril_fatface"
         android:padding="10dp"
-        android:text="@string/menu_cars"
+        android:text="Carros"
         android:textSize="24sp"
         android:textStyle="bold" />
-    <!--Busqueda-->
 
+    <!-- Sección de búsqueda -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/txtBuscarCarro"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/serch_barra"
+            android:hint="Buscar por placa"
             android:padding="10dp" />
 
         <ImageButton
             android:id="@+id/btnBuscarCarro"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_buscar"
             android:contentDescription="Buscar"
-            android:layout_marginStart="10dp"/>
+            android:onClick="Buscar"
+            android:src="@drawable/ic_buscar" />
     </LinearLayout>
 
     <!-- Listado de carros -->
@@ -51,12 +51,11 @@
         android:layout_weight="1"
         android:dividerHeight="10dp" />
 
-    <!-- Botones inferiores -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:paddingTop="10dp">
 
         <ImageButton
@@ -65,8 +64,9 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_agregar"
-            android:contentDescription="Agregar" />
+            android:contentDescription="Agregar"
+            android:onClick="Insertar"
+            android:src="@drawable/ic_agregar" />
 
         <ImageButton
             android:id="@+id/btnEditarCarro"
@@ -74,8 +74,9 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_editar"
-            android:contentDescription="Editar" />
+            android:contentDescription="Editar"
+            android:onClick="Update"
+            android:src="@drawable/ic_editar" />
 
         <ImageButton
             android:id="@+id/btnEliminarCarro"
@@ -83,8 +84,9 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_eliminar"
-            android:contentDescription="Eliminar" />
+            android:contentDescription="Eliminar"
+            android:onClick="Eliminar"
+            android:src="@drawable/ic_eliminar" />
 
         <ImageButton
             android:id="@+id/btnSalirCarro"
@@ -92,8 +94,9 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_regresar"
-            android:contentDescription="Salir" />
+            android:contentDescription="Salir"
+            android:onClick="regresar"
+            android:src="@drawable/ic_regresar" />
     </LinearLayout>
 
 </LinearLayout>
